# shadertool

./: CMakeLists.txt  qtfuncs.cmake
src/: main.cpp  openglwidget.cpp  openglwidget.h  shaderviewpanel.cpp  shaderviewpanel.h
src/generic/: basewindow.cpp  basewindow.h  filebrowserwidget.cpp  filebrowserwidget.h  filewatcher.cpp  filewatcher.h  utility.h
src/res/: test.frag  test.vert
